# factor-lab

./: .env.example  .gitignore  DEOPENCLAW_PHASE1_COMPLETION_REPORT.md  MIGRATION_COMPLETE.md  MIGRATION_SUCCESS.md  README.md  RELEASE_v1.md  RUNBOOK.md  TASK1_COMPLETION_REPORT.md  pyproject.toml
configs/: candidate_generation_policy.json  factor_families_v1.json  first_workflow.json  hypothesis_templates_v1.json  research_autonomy_policy.json  research_coding_policy.json  research_evidence_policy.json  research_factor_primitives.json  tushare_batch.json  tushare_workflow.json  tushare_workflow_longer.json
docs/: agent-llm-settings-sync-plan-2026-04-28.md  artifact-inventory-2026-04-28.md  artifact-policy.md  daemon-heartbeat-schema.md  llm-token-usage-tracking-plan-2026-04-28.md  openclaw-reference-policy.md  real-llm-compact-context-plan-2026-04-28.md
scripts/: apply_strategy_plan.py  apply_tushare_direct_routes.sh  build_ab_harness.py  build_approved_candidate_universe.py  build_candidate_triage_model.py  build_change_report.py  build_decision_impact_report.py  build_decision_observation_report.py  build_html_report.py  build_index_page.py  build_llm_retrospective.py  build_paper_portfolio.py  build_paper_portfolio_retrospective.py  build_queue_explanation.py  build_recommendation_context.py  build_recommendation_memory.py  build_research_attribution.py  build_research_branch_plan.py  build_research_candidate_pool.py  build_research_metrics.py  build_research_planner_proposal.py  build_research_planner_snapshot.py  build_research_space_map.py  build_run_summary.py  (+40 more)
(+291 files in other folders)
