[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "factor-research-mvp"
version = "0.1.0"
description = "Minimal factor research workflow MVP"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "tushare>=1.4.25",
  "pyarrow>=14.0",
  "fastapi>=0.110",
  "jinja2>=3.1",
  "uvicorn>=0.27"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
